# llvm-gpu-pgo

./: .clangd  .gitignore  CMakeLists.txt
gpu-rtlib/: CMakeLists.txt  DeviceLib.cpp  DeviceLibLegacy.cpp  HostLib.cpp  RTLib.h  RTlib.cpp
instrument/: AMDGPUAtomicLowering.cpp  CMakeLists.txt  CreateInstrProfRuntimeHook.cpp  GPUInstr.cpp  GPURTLibInterop.cpp  IncrementToWarpBallot.cpp  ModuleInfo.cpp  Passes.h  RelocateProfileInsts.cpp  RemoveProfileMetadata.cpp
patches/: InstrProfiling.cpp.patch  InstrProfilingPlatformLinux.c.patch  PGOInstrumentation.cpp.patch
patches/blender/: CMakeLists.txt.patch  device_impl.cpp.patch  queue.cpp.patch
patches/llvm/: AMDGPUAsmBackend.cpp.patch  AMDGPUISelLowering.cpp.patch  CGProfile.cpp.patch  PGOInstrumentation.cpp.patch  split-indirectbr-critical-edges.ll.patch
tests/: lit.cfg  lit.cfg.py
tests/components/: data-race.cpp  devicelib-mock-legacy.cpp  devicelib-mock.cpp  hostlib-mock.cpp
tests/endtoend/: BinomialOption.ll  BitonicSort.ll  FastWalshTransform.ll  FloydWarshall.ll  MatrixMultiplication.ll  PrefixSum.ll  dct.ll  dwtHaar1D.ll  helloworld.ll  lit.local.cfg
tests/passes/: createhook-check.ll  createhook-wrongtarget.ll  gpurtlib-check.ll  gpurtlib-wrongtarget.ll  warpballot-simple.ll  warpballot-step.ll  warpballot-wrongtarget.ll
